Function: x86 linux-head and change mkelf tool
[x86-kboot] Adding Linux boot header for the first time
    -- This function cannot be used normally, but it can be detected.

[x86-preload] Fixed load alignment issue
    -- Fixed less loading issue due to division.

[build] Use ld instead of gcc as mkelf tool
    -- Prevent some position-independent problems.
    -- Updated compilation parameters for x86,
        but no other instruction sets have been modified.

--- a/boot/kboot/Makefile
+++ b/boot/kboot/Makefile
@@ -3,17 +3,18 @@ include $(srctree)/platform.mk
 export KASAN_SANITIZE = n
 
 obj-y += $(arch)/ lib/ piggy.o
-extra-y += $(arch)/kboot.lds
+extra-y += $(arch)/boot.lds
 
 include-y += $(arch)/include/ lib/
 
 kboot-asflags-y  += -D__ASSEMBLY__
-kboot-ccflags-y  += -std=gnu11  -Wall -Werror
+kboot-ccflags-y  += -std=gnu11 -Wall -Werror
 kboot-acflags-y  += -ffreestanding -nostdinc
-kboot-acflags-y  += -fPIC -fno-stack-protector -fno-common
+kboot-acflags-y  += -fPIE -fno-stack-protector -fno-common
 kboot-ldsflags-y += -D__ASSEMBLY__
-kboot-elfflags-y += -T $(obj)/$(arch)/kboot.lds -Wl,-Map=$@.map
-kboot-elfflags-y += -Wl,--no-dynamic-linker -nostdlib
+kboot-elfflags-y += -pie -nostdlib
+kboot-elfflags-y += $(call ld-option, --no-dynamic-linker)
+kboot-elfflags-y += -T $(obj)/$(arch)/boot.lds -Map=$@.map
 
 ifdef CONFIG_KERNEL_DEBUG
 kboot-acflags-y  += -g
