--- a/boot/kboot/x86/realmode/Makefile
+++ b/boot/kboot/x86/realmode/Makefile
@@ -1,4 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+ccflags-y := -m16 -fno-PIE
 obj-y += memdetect.o a20.o
-a20-flags-y := -m16 -fno-pic
-memdetect-flags-y := -m16 -fno-pic
