Function: Add x86 bitops, kernel bitops lib and unit test
[x86-bitops] Added unsafe mode function
    -- Added ffsuf and flsuf to improve efficiency.
    -- Fixed previous technical issues (ffs fls).

[lib-bitops] Added block finding function
    -- Added block finding function to do various bit lookups
    -- Fixed previous bit lookup references to bitmaps by other functions

[selftest-bitops] Added bitops unit test
    -- Build a unit test tool and pass the test.

[string] Added memdiff function
    -- Used to find differences in memory.
    -- Fixed bugs with other functions.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += libc/ font/ crypto/
+obj-y += bitops.o bitmap.o
 obj-y += rbtree.o sort.o klist.o
-obj-y += kfifo.o bitmap.o ncache.o
+obj-y += kfifo.o ncache.o
 obj-y += size.o time.o idr.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
