--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+obj-$(CONFIG_SELFTEST_LIB_BITOPS) += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_IDR) += idr.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE) += ncache.o
