Maintain: Add panic DEBUG_CHECK list and list unit test
[panic] Added a unified debug detection interface
    -- Only the most basic part has been completed, and
        the switch between bug and warn needs to be completed.

[list] Rearranged the names of most traversal iterators
    -- Added some special linked list iteration methods.

[selftest-list] Added list unit test
    -- Build a unit test tool and pass the test.
    -- But only some basic unit tests have been done so far.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,6 +4,7 @@ obj-y += bitops.o bitmap.o
 obj-y += rbtree.o sort.o klist.o
 obj-y += kfifo.o ncache.o
 obj-y += size.o time.o idr.o
+obj-$(CONFIG_DEBUG_LIST) += list.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
 obj-$(CONFIG_DT) += fdt/
