--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_SELFTEST_LIB_BITOPS) += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_IDR) += idr.o
+obj-$(CONFIG_SELFTEST_LIB_LIST) += list.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE) += ncache.o
