--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -20,4 +20,8 @@ config SELFTEST_LIB_NCACHE
     bool "Ncache Test"
     default y
 
+config SELFTEST_LIB_SLIST
+    bool "Single List Test"
+    default y
+
 endif
