--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -3,3 +3,4 @@ obj-$(CONFIG_SELFTEST_LIB_BITOPS) += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_IDR) += idr.o
 obj-$(CONFIG_SELFTEST_LIB_LIST) += list.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE) += ncache.o
+obj-$(CONFIG_SELFTEST_LIB_SLIST) += slist.o
