--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-$(CONFIG_SELFTEST_LIB_BITOPS) += bitops.o
-obj-$(CONFIG_SELFTEST_LIB_IDR) += idr.o
-obj-$(CONFIG_SELFTEST_LIB_LIST) += list.o
-obj-$(CONFIG_SELFTEST_LIB_NCACHE) += ncache.o
-obj-$(CONFIG_SELFTEST_LIB_SLIST) += slist.o
+obj-$(CONFIG_SELFTEST_LIB_BITOPS)   += bitops.o
+obj-$(CONFIG_SELFTEST_LIB_HLIST)    += hlist.o
+obj-$(CONFIG_SELFTEST_LIB_IDR)      += idr.o
+obj-$(CONFIG_SELFTEST_LIB_LIST)     += list.o
+obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
+obj-$(CONFIG_SELFTEST_LIB_SLIST)    += slist.o
