--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,6 +5,7 @@ obj-y += rbtree.o sort.o klist.o
 obj-y += kfifo.o ncache.o
 obj-y += size.o time.o idr.o
 obj-$(CONFIG_DEBUG_LIST) += list.o
+obj-$(CONFIG_DEBUG_HLIST) += hlist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
