Supplement: x86 traps and add common entry
[x86-irq] New interrupt handling method!!
    -- It basically covers all interrupts and exceptions
    -- Double error and NMI have not been processed yet

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += boot/ lib/ mm/
-obj-y += setup.o proc.o
+obj-y += setup.o proc.o nmi.o
 obj-y += idt.o irq.o traps.o
 obj-y += e820.o tsc.o syscall.o
 
