--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += device/ lock/ irq/ sched/ time/
 obj-y += task/ printk/ binfmt/
-obj-y += kcoro.o random.o
+obj-y += kcoro.o random.o entry.o
 obj-y += crash.o syscall.o pevent.o
 obj-y += resource.o power.o
