Supplement: First add softirq and fix bitmap header
[softirq] First initialization
    -- It is already possible to implement a simple suspend
    -- Basic functions have been tested

[bitmap] Fixed header file not included
    -- Remove types and limit and replace with kernel.

--- a/usr/selftest/kernel/Kconfig
+++ b/usr/selftest/kernel/Kconfig
@@ -8,4 +8,8 @@ config SELFTEST_KERNEL_RANDOM
     bool "Random Test"
     default y
 
+config SELFTEST_KERNEL_SOFTIRQ
+    bool "Softirq Test"
+    default y
+
 endif
