Maintain: immortal-sword dts and others
[immortal-sword] Created standalone chip dtsi
    -- Added leds and keys for board level dts.

[other] Organized some other things
    -- First add input-event-codes for dt-bindings.
    -- Organized comments for other dts.

--- a/boot/dts/raspi-2b.dts
+++ b/boot/dts/raspi-2b.dts
@@ -1,4 +1,8 @@
 /* SPDX-License-Identifier: GPL-2.0-or-later */
+/*
+ * Copyright(c) 2021 Sanpe <sanpeqf@gmail.com>
+ */
+
 /dts-v1/;
 #include "broadcom/bcm2836.dtsi"
 
