--- a/configs/gx6605s_defconfig
+++ b/configs/gx6605s_defconfig
@@ -18,7 +18,7 @@ CONFIG_HIGHMEM_OFFSET=0x20000000
 # drivers
 CONFIG_DT=y
 CONFIG_BUILTIN_DTB=y
-CONFIG_BUILTIN_DTB_PATH="boot/dts/gx6605s.dtb"
+CONFIG_BUILTIN_DTB_PATH="boot/dts/immortal-sword.dtb"
 
 CONFIG_IRQCHIP_GX6605S=y
 CONFIG_CLKSRC_GX6605=y
