--- a/boot/dts/Makefile
+++ b/boot/dts/Makefile
@@ -1,16 +1,13 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-dtb-$(CONFIG_ARCH_ARM) += neopi-nano.dtb
-dtb-$(CONFIG_ARCH_ARM) += neopi-one.dtb
-dtb-$(CONFIG_ARCH_ARM) += realview-eb.dtb
-dtb-$(CONFIG_ARCH_ARM) += raspi-zero.dtb
-dtb-$(CONFIG_ARCH_ARM) += raspi-2b.dtb
-dtb-$(CONFIG_ARCH_ARM) += raspi-3b.dtb
-
-dtb-$(CONFIG_ARCH_CSKY) += gx6605s.dtb
-
-dtb-$(CONFIG_ARCH_X86) += ibmpc.dtb
-
-dtb-$(CONFIG_ARCH_XTENSA) += esp32.dtb
-dtb-$(CONFIG_ARCH_XTENSA) += esp8266.dtb
+dtb-$(CONFIG_ARCH_ARM)      += neopi-nano.dtb
+dtb-$(CONFIG_ARCH_ARM)      += neopi-one.dtb
+dtb-$(CONFIG_ARCH_ARM)      += realview-eb.dtb
+dtb-$(CONFIG_ARCH_ARM)      += raspi-zero.dtb
+dtb-$(CONFIG_ARCH_ARM)      += raspi-2b.dtb
+dtb-$(CONFIG_ARCH_ARM)      += raspi-3b.dtb
+dtb-$(CONFIG_ARCH_CSKY)     += immortal-sword.dtb
+dtb-$(CONFIG_ARCH_X86)      += ibmpc.dtb
+dtb-$(CONFIG_ARCH_XTENSA)   += esp32.dtb
+dtb-$(CONFIG_ARCH_XTENSA)   += esp8266.dtb
 
 clean-y += .*.tmp
