--- a/boot/dts/espressif/esp32.dtsi
+++ b/boot/dts/espressif/esp32.dtsi
@@ -1,4 +1,8 @@
-/dts-v1/;
+/* SPDX-License-Identifier: GPL-2.0-or-later */
+/*
+ * Copyright(c) 2021 Sanpe <sanpeqf@gmail.com>
+ */
+
 #include <dt-bindings/gpio.h>
 #include <dt-bindings/input/input.h>
 
