--- a/boot/dts/realview-eb.dts
+++ b/boot/dts/realview-eb.dts
@@ -1,4 +1,7 @@
 /* SPDX-License-Identifier: GPL-2.0-or-later */
+/*
+ * Copyright(c) 2021 Sanpe <sanpeqf@gmail.com>
+ */
 
 /dts-v1/;
 #include "arm/realview-eb.dtsi"
