Maintain: scripts-dtc
[scripts-dtc] Removed environmental dependency
    -- Fixed the dependency of the compilation system on the environment.

--- a/boot/kboot/lib/Makefile
+++ b/boot/kboot/lib/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+include-direct-$(CONFIG_DT) += lib/fdt/
 obj-y += string.o check.o memtest.o
 obj-y += mem.o info.o vsprintf.o decompress.o
 obj-$(CONFIG_DT) += fdt.o fdt_wip.o fdt_ro.o fdt_rw.o
