--- a/lib/fdt/Makefile
+++ b/lib/fdt/Makefile
@@ -1,6 +1,7 @@
-obj-y += fdt_addresses.o 
-obj-y += fdt_empty_tree.o 
-# obj-y += fdt_overlay.o
+# SPDX-License-Identifier: GPL-2.0-or-later
+include-y += ./
+obj-y += fdt_addresses.o
+obj-y += fdt_empty_tree.o
 obj-y += fdt_ro.o
 obj-y += fdt_rw.o
 obj-y += fdt_strerror.o
