Maintain: It mainly fixes the dependency of x86 makefile
    -- Compilation dependency rule of entry on symbal is added.
    -- Handle register operations in a more general way.
    -- Sorted out the format of bitops.

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -18,6 +18,7 @@ subdir-$(CONFIG_SMP) += smpboot/
 $(obj)/smp.o: $(obj)/smpboot/
 
 $(obj)/setup.o: $(obj)/asm-offset.h
+$(obj)/entry32.o: $(obj)/asm-offset.h
 $(obj)/lib: $(obj)/asm-offset.h
 
 extra-y += asm-offset.h kernel.lds
