Function: Add timer for the first time
[timer] Add timer for the first time
    -- At present, only some of the simplest timing
        functions have been added, the function to
        adjust the timer time has not been completed,
        and the time wheel has not been completely tested.

[selftest] Add timer unit test for the first time
    -- Added some of the simplest tests and passed
        the test completely.

--- a/usr/selftest/kernel/Kconfig
+++ b/usr/selftest/kernel/Kconfig
@@ -12,4 +12,8 @@ config SELFTEST_KERNEL_SOFTIRQ
     bool "Softirq Test"
     default y
 
+config SELFTEST_KERNEL_TIMER
+    bool "Timer Test"
+    default y
+
 endif
