Function: Add and sort out the functions of kernel coroutine
[kcoro] kernel protocol is maintained
    -- Added function for coroutine delay.
    -- Added header file structure annotation.

[selftest] Test of adding kernel coroutine for the first time
    -- There are three types of tests, namely, ordinary coroutine,
        busy blocking coroutine and delayed coroutine.

--- a/usr/selftest/kernel/Kconfig
+++ b/usr/selftest/kernel/Kconfig
@@ -4,6 +4,10 @@ menuconfig SELFTEST_KERNEL
     default y
 if SELFTEST_KERNEL
 
+config SELFTEST_KERNEL_KCORO
+    bool "Random Unit Tests"
+    default y
+
 config SELFTEST_KERNEL_RANDOM
     bool "Random Test"
     default y
