--- a/usr/selftest/kernel/Makefile
+++ b/usr/selftest/kernel/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+obj-$(CONFIG_SELFTEST_KERNEL_KCORO) += kcoro.o
 obj-$(CONFIG_SELFTEST_KERNEL_RANDOM) += random.o
 obj-$(CONFIG_SELFTEST_KERNEL_SOFTIRQ) += softirq.o
 obj-$(CONFIG_SELFTEST_KERNEL_TIMER) += timer.o
