Maintain: Fixed some "minor errors" in the kernel
[list] Fixed a function to check outsize
    -- Fixed an error on the caused by deleting
        the flag and replacing it with poison.

[hlist] Two prompt errors were corrected
    -- The address of double linked list is
        introduced incorrectly.

[github] Replace with single threaded compilation
    -- Errors can be found more intuitively.

--- a/.github/workflows/x86-defconfig.yml
+++ b/.github/workflows/x86-defconfig.yml
@@ -22,6 +22,6 @@ jobs:
     - name: make x86_defconfig
       run:  make x86_defconfig
     - name: make
-      run:  make -j$(($(nproc --all) * 2))
+      run:  make
     - name: make distclean
       run:  make distclean
