Function: Build scheduler framework for the first time
[sched] Build a basic scheduling framework
    -- Added FIFO scheduling and fixed RR scheduling.
    -- Use the same context switching mechanism as kcoro.

[task] Basic fork and PID allocation are added
    -- PID allocator based on IDR algorithm is added.

[kthread] Added kernel thread daemon task
    -- Kthread is developed to centrally manage kernel threads.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += device/ lock/ irq/ sched/ time/
-obj-y += task/ printk/ binfmt/
-obj-y += kcoro.o random.o entry.o
-obj-y += crash.o syscall.o pevent.o
+obj-y += device/ lock/ irq/ sched/
+obj-y += printk/ binfmt/ time/
+obj-y += namespace/ task/
+obj-y += kthread.o kcoro.o entry.o
+obj-y += random.o pevent.o
+obj-y += crash.o syscall.o
 obj-y += resource.o power.o
