--- a/lib/Makefile
+++ b/lib/Makefile
@@ -7,6 +7,7 @@ obj-y += size.o time.o idr.o
 obj-$(CONFIG_DEBUG_LIST) += list.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist.o
+obj-$(CONFIG_DEBUG_REFCOUNT) += refcount.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
 obj-$(CONFIG_DT) += fdt/
