--- a/include/asm-generic/Makefile
+++ b/include/asm-generic/Makefile
@@ -2,10 +2,12 @@
 mandatory-y += atomic.h
 mandatory-y += barrier.h
 mandatory-y += bitops.h
+mandatory-y += bug.h
 mandatory-y += delay.h
 mandatory-y += io.h
 mandatory-y += linkage.h
 mandatory-y += mmiowb.h
 mandatory-y += percpu.h
+mandatory-y += pgalloc.h
 mandatory-y += rwonce.h
 mandatory-y += unaligned.h
