--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0
-obj-y += sched.o core.o idle.o
+obj-y += sched.o core.o preempt.o idle.o
 obj-$(CONFIG_SCHED_RR) += rr.o
 obj-$(CONFIG_SCHED_FIFO) += fifo.o
 obj-$(CONFIG_SCHED_DEADLINE) += deadline.o
