Function: Supported grub and other Linux header startup methods.
[kboot] Added the startup mode of Linux startup header.
    -- Reformatted some parameters.

[tools] Kernelcrc and BMP 2C were sorted out.
    -- Fixed a number of errors in the code and fixed a format.

--- a/doc/logo/Makefile
+++ b/doc/logo/Makefile
@@ -4,7 +4,7 @@ $(obj)/%.bmp: $(obj)/%.svg
 	$(Q)$(BASH) $(src)/logogen.sh
 
 $(obj)/logo.c: $(obj)/logo.bmp
-	$(Q)$(MAKE) $(build)=tools/logo/
+	$(Q)$(MAKE) $(build)=tools/logo
 	$(Q)tools/logo/bmp2c $^ -o $@
 
 obj-y += logo.o terminal-logo.o
