--- a/include/asm-generic/Makefile
+++ b/include/asm-generic/Makefile
@@ -3,6 +3,7 @@ mandatory-y += atomic.h
 mandatory-y += barrier.h
 mandatory-y += bitops.h
 mandatory-y += bug.h
+mandatory-y += errno.h
 mandatory-y += delay.h
 mandatory-y += io.h
 mandatory-y += linkage.h
