--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -2,6 +2,7 @@
 obj-$(CONFIG_SELFTEST_LIB_BITOPS)   += bitops.o
 obj-$(CONFIG_SELFTEST_LIB_HLIST)    += hlist.o
 obj-$(CONFIG_SELFTEST_LIB_IDR)      += idr.o
+obj-$(CONFIG_SELFTEST_LIB_ILIST)    += ilist.o
 obj-$(CONFIG_SELFTEST_LIB_LIST)     += list.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
 obj-$(CONFIG_SELFTEST_LIB_SLIST)    += slist.o
