Maintain: Added benchmark for various memory functions.
[readline] Fixed an issue with history merging.
    -- Fixed history substring and merge issues.
    -- Fixed an issue with linked list initialization.

[selftest] Added one-click test group function.
    -- Use an iterator to find all unit tests in a group.
    -- Added benchmarks for some memory functions.

[other] other problems.
    -- Fixed some initialization issues with other
        parts of the kernel.

--- a/usr/selftest/string/Kconfig
+++ b/usr/selftest/string/Kconfig
@@ -4,6 +4,10 @@ menuconfig SELFTEST_STRING
     default y
 if SELFTEST_STRING
 
+config SELFTEST_STRING_MEMCHR
+    bool "Memchr Test"
+    default y
+
 config SELFTEST_STRING_MEMCMP
     bool "Memcmp Test"
     default y
@@ -14,6 +18,10 @@ config SELFTEST_STRING_MEMCPY
 
 config SELFTEST_STRING_MEMMOVE
     bool "Memmove Test"
+    default y
+
+config SELFTEST_STRING_MEMSCAN
+    bool "Memscan Test"
     default y
 
 config SELFTEST_STRING_MEMSET
