--- a/usr/selftest/string/Makefile
+++ b/usr/selftest/string/Makefile
@@ -1,5 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+obj-$(CONFIG_SELFTEST_STRING_MEMCHR)    += memchr.o
 obj-$(CONFIG_SELFTEST_STRING_MEMCMP)    += memcmp.o
 obj-$(CONFIG_SELFTEST_STRING_MEMCPY)    += memcpy.o
 obj-$(CONFIG_SELFTEST_STRING_MEMMOVE)   += memmove.o
+obj-$(CONFIG_SELFTEST_STRING_MEMSCAN)   += memscan.o
 obj-$(CONFIG_SELFTEST_STRING_MEMSET)    += memset.o
