Function: Added kshell's associative feature and maintained other parts.
[kshell] Add and maintain.
    -- Added the associative function of the instruction,
        just press the tab and you will have what you want.
    -- Improve the old problem of parser, no longer use
        fixed-length buffer, can accommodate longer commands.
    -- Added env cmd, one piece to view all environment variables.

[selftest] Add and maintain.
    -- Fixed iterator issues caused by modifying strings.
    -- Added unit tests for kshell parser.

--- a/usr/selftest/Kconfig
+++ b/usr/selftest/Kconfig
@@ -7,6 +7,8 @@ if KUSR_SELFTEST
 
 source "usr/selftest/kernel/Kconfig"
 
+source "usr/selftest/kshell/Kconfig"
+
 source "usr/selftest/lib/Kconfig"
 
 source "usr/selftest/memory/Kconfig"
