--- a/usr/selftest/Makefile
+++ b/usr/selftest/Makefile
@@ -2,6 +2,7 @@
 include-direct-y += $(src)/
 obj-y += selftest.o
 obj-$(CONFIG_SELFTEST_KERNEL) += kernel/
+obj-$(CONFIG_SELFTEST_KSHELL) += kshell/
 obj-$(CONFIG_SELFTEST_LIB) += lib/
 obj-$(CONFIG_SELFTEST_MEMORY) += memory/
 obj-$(CONFIG_SELFTEST_STRING) += string/
