Maintain: Unified use of kshell output method.
[kshell] Add and maintain.
    -- Add kshell-specific print function to prepare
        for future pipelines.
    -- Add the time command, which can be used to
        view the execution time of the instruction.

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -30,6 +30,14 @@ config KCMD_SLEEP
     bool "Sleep Command Support"
     default y
 
+config KCMD_TIME
+    bool "Time Command Support"
+    default y
+
+config KCMD_UPTIME
+    bool "Uptime Command Support"
+    default y
+
 config KCMD_WATCH
     bool "Watch Command Support"
     default y
