--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -6,4 +6,6 @@ obj-$(CONFIG_KCMD_MEM) += mem.o
 obj-$(CONFIG_KCMD_PANIC) += panic.o
 obj-$(CONFIG_KCMD_REBOOT) += reboot.o
 obj-$(CONFIG_KCMD_SLEEP) += sleep.o
+obj-$(CONFIG_KCMD_TIME) += time.o
+obj-$(CONFIG_KCMD_UPTIME) += uptime.o
 obj-$(CONFIG_KCMD_WATCH) += watch.o
