Maintain: Reorganized lib for x86.
[x86-lib] Transfer some memory functions from string to memcpy.
    -- To redefine the new design standard, we put the function
        for string acceleration into string.c and the function
        for mem acceleration into memcpy.c

--- a/arch/x86/lib/Makefile
+++ b/arch/x86/lib/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += delay.o iomem.o iodelay.o
-obj-$(CONFIG_ARCH_X86_32) += string32.o strstr32.o memcpy32.o
+obj-$(CONFIG_ARCH_X86_32) += string32.o memcpy32.o
+obj-$(CONFIG_ARCH_X86_64) += string64.o memcpy64.o
 obj-$(CONFIG_ARCH_X86_32) += setjmp32.o kcontext32.o
 obj-$(CONFIG_ARCH_X86_64) += setjmp64.o kcontext64.o
