Function: Added ability for selftest to output details.
[selftest] Added test information and help.
    -- Unit test return values and hints can be
        displayed by using the -i option

    -- Added benchmark for strcmp strlen strncmp
        strnicmp strnlen.

--- a/usr/selftest/string/Kconfig
+++ b/usr/selftest/string/Kconfig
@@ -28,4 +28,24 @@ config SELFTEST_STRING_MEMSET
     bool "Memset Test"
     default y
 
+config SELFTEST_STRING_STRCMP
+    bool "Strcmp Test"
+    default y
+
+config SELFTEST_STRING_STRLEN
+    bool "Strlen Test"
+    default y
+
+config SELFTEST_STRING_STRNCMP
+    bool "Strncmp Test"
+    default y
+
+config SELFTEST_STRING_STRNICMP
+    bool "Strnicmp Test"
+    default y
+
+config SELFTEST_STRING_STRNLEN
+    bool "Strnlen Test"
+    default y
+
 endif
