--- a/usr/selftest/string/Makefile
+++ b/usr/selftest/string/Makefile
@@ -5,3 +5,8 @@ obj-$(CONFIG_SELFTEST_STRING_MEMCPY)    += memcpy.o
 obj-$(CONFIG_SELFTEST_STRING_MEMMOVE)   += memmove.o
 obj-$(CONFIG_SELFTEST_STRING_MEMSCAN)   += memscan.o
 obj-$(CONFIG_SELFTEST_STRING_MEMSET)    += memset.o
+obj-$(CONFIG_SELFTEST_STRING_STRCMP)    += strcmp.o
+obj-$(CONFIG_SELFTEST_STRING_STRLEN)    += strlen.o
+obj-$(CONFIG_SELFTEST_STRING_STRNCMP)	+= strncmp.o
+obj-$(CONFIG_SELFTEST_STRING_STRNICMP)	+= strnicmp.o
+obj-$(CONFIG_SELFTEST_STRING_STRNLEN)	+= strnlen.o
