Function: Kernel parameters are supported.
[boot-param] The feature was added for the first time.
    -- The function with the kernel parameter can
        now be called by initcall.

[initcall] Modified the kernel's initcall symbol.
    -- We now take a more sensible array approach
        to declaring the initcall symbol.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,7 +3,7 @@ obj-y += libc/ font/ crypto/
 obj-y += bitops.o bitmap.o
 obj-y += rbtree.o sort.o klist.o
 obj-y += kfifo.o ncache.o ilist.o
-obj-y += size.o time.o idr.o
+obj-y += size.o time.o idr.o param.o
 obj-$(CONFIG_DEBUG_LIST) += list.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist.o
