Function: Goto instruction added.
[goto-cmd] Used to jump to the specified address.
    -- The instruction can now jump to the specified
        address and automatically exit the timeout task.

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -14,6 +14,10 @@ config KCMD_EXPORT
     bool "Export Command Support"
     default y
 
+config KCMD_GOTO
+    bool "Goto Command Support"
+    default y
+
 config KCMD_MEM
     bool "Memory Command Support"
     default y
