--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -2,6 +2,7 @@
 obj-$(CONFIG_KCMD_CLEAR) += clear.o
 obj-$(CONFIG_KCMD_ECHO) += echo.o
 obj-$(CONFIG_KCMD_EXPORT) += export.o
+obj-$(CONFIG_KCMD_GOTO) += goto.o
 obj-$(CONFIG_KCMD_MEM) += mem.o
 obj-$(CONFIG_KCMD_PANIC) += panic.o
 obj-$(CONFIG_KCMD_REBOOT) += reboot.o
