Function: Added uptime command.
[uptime-cmd] Add for the first time.
    -- Added support for kernel time, international atomic time
        (temps atomique International), startup time and real time.

[librtc] Add for the first time.
    -- Librtc is separated from the RTC driver for
        separate use by the kernel.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += libc/ font/ crypto/
-obj-y += bitops.o bitmap.o
+obj-y += bitops.o bitmap.o librtc.o
 obj-y += rbtree.o sort.o klist.o
 obj-y += kfifo.o ncache.o ilist.o
 obj-y += size.o time.o idr.o param.o
