Function: Some important features of PCI framework are added.
[pci-core] Fixed pcibar exceptions in some cases.
    -- Added special operations for mmio_always.

[pci-base] Added functions for enabling devices.
    -- The enabling device will do the following:
        1: Initialize the device power status to D0.
        2: Initialize the upstream PCI bridge if it is a PCIe device.
        3: Enable PMIO and mmio of pcibar (pcibios_device_enable).
        4: Initialize PCI device interrupt pin (without use msi).

--- a/drivers/pci/core/Makefile
+++ b/drivers/pci/core/Makefile
@@ -2,3 +2,4 @@
 obj-y += bus.o core.o driver.o rom.o
 obj-y += base.o bios.o irq.o power.o
 obj-y += host.o find.o raw.o iomap.o
+obj-y += resource.o
