Function: Support for paravirtualized panic.
[pvpanic] Adding a driver for the first time.
    -- TODO, There is still a problem with the release of
        resources, and it will be modified after the
        devres framework is completed.

    -- Added support for both enumeration platforms
        pci and platform.

--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -62,6 +62,11 @@ CONFIG_PARALLEL_I8255=y
 CONFIG_PCI=y
 CONFIG_PCI_I386=y
 
+CONFIG_PLATFORM=y
+CONFIG_PVPANIC=y
+CONFIG_PVPANIC_PLATFORM=y
+CONFIG_PVPANIC_PCI=y
+
 CONFIG_POWER=y
 CONFIG_POWER_CE4100=y
 CONFIG_POWER_CS5530A=y
