Function: Added kboot support for x86-64.
[x86-kboot] Kernel 64-bit starting point.

    Let's make complaints about two points at first:

    -- We no longer use the position-independent model,
        because fucking gcc does not support 16bit code in
        elf_x86_64 mode, and kboot will copy the child to the
        absolute address at link time after startup.

    -- We don't use 16bit c code anymore, because gcc doesn't support
        linking in elf_x86_64 mode. You might think of using objcopy
        for format conversion, but after using objcopy the linker
        will screw everything up, so we use assembly to complete
        what originally belonged to c mission.

    Next, let's talk about some other things we do:

    -- Let's introduce x86_64 mapping process, in the flat mode,
        we will only map one PMD page (only 2MiB) to enter the long mode.
        After entering the C code, we will start the secondary mapping.

    -- For the 32-bit and 64 bit modes, we designed two sets
        of page tables and GDT respectively.

    -- x86_64 can't be used yet because there are still a
        lot of things to be submitted in batches.

--- a/boot/kboot/Makefile
+++ b/boot/kboot/Makefile
@@ -10,10 +10,10 @@ include-y += $(arch)/include/ lib/
 kboot-asflags-y  += -D__ASSEMBLY__
 kboot-ccflags-y  += -std=gnu11 -Wall -Werror
 kboot-acflags-y  += -ffreestanding -nostdinc
-kboot-acflags-y  += -fPIE -fno-stack-protector -fno-common
+kboot-acflags-y  += -fno-stack-protector -fno-common
 kboot-acflags-y  += -ffunction-sections -fdata-sections
 kboot-ldsflags-y += -D__ASSEMBLY__
-kboot-elfflags-y += -pie -nostdlib --gc-sections
+kboot-elfflags-y += -nostdlib --gc-sections
 kboot-elfflags-y += $(call ld-option, --no-dynamic-linker)
 kboot-elfflags-y += -T $(obj)/$(arch)/boot.lds -Map=$@.map
 
@@ -21,6 +21,8 @@ ifdef CONFIG_KERNEL_DEBUG
 kboot-acflags-y  += -g
 kboot-elfflags-y += -g
 endif
+
+-include $(src)/$(arch)/config.mk
 
 asflags-y   = $(strip $(kboot-asflags-y) $(platform-asflags-y))
 ccflags-y   = $(strip $(kboot-ccflags-y) $(platform-ccflags-y))
