--- a/boot/kboot/x86/boot/Makefile
+++ b/boot/kboot/x86/boot/Makefile
@@ -1,4 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += header.o startup16.o
-obj-$(CONFIG_ARCH_X86_32) += startup32.o
+obj-y += header.o startup16.o startup32.o
 obj-$(CONFIG_ARCH_X86_64) += startup64.o
