--- a/boot/kboot/x86/realmode/Makefile
+++ b/boot/kboot/x86/realmode/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-ccflags-y := -m16 -fno-PIE
-obj-y += memdetect.o a20.o
+extra-y += e820-offset.h
+obj-y := a20.o memdetect.o
+$(obj)/memdetect.o: $(obj)/e820-offset.h
