Maintain: irqchip detaches from dt for the first time.
[irqchip] functional maintenance.
    -- Added comments on related structures in the header
        file in detail, separating irqchip operations.

    -- Irqchip can be used separately from the device tree
        through the channel number. We add a kconfig
        configuration item separately, and add other driver
        dependencies on this configuration.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/block/Kconfig
+++ b/drivers/block/Kconfig
@@ -7,7 +7,7 @@ source "drivers/block/partitions/Kconfig"
 
 config BLK_FLOPPY
     bool "Floppy Disk Device Support"
-    depends on ARCH_X86
+    depends on ARCH_X86 && IRQCHIP_DT
 
 config BLK_AHCISIM
     bool "Simple AHCI Controller Support"
