--- a/drivers/clockevent/Kconfig
+++ b/drivers/clockevent/Kconfig
@@ -8,12 +8,12 @@ config CLKEVT_GX6605S
 
 config CLKEVT_HPET
     bool "High Precision Event Timer (HPET) Support"
-    depends on ARCH_X86
+    depends on ARCH_X86 && IRQCHIP_DT
     default y
 
 config CLKEVT_I8253
     bool "I8253 Timer (PIT) Support"
-    depends on ARCH_X86
+    depends on ARCH_X86 && IRQCHIP_DT
     default y
 
 endmenu
