Maintain: The i8042 code is redesigned according to the framework.

--- a/configs/x86_64_defconfig
+++ b/configs/x86_64_defconfig
@@ -75,6 +75,9 @@ CONFIG_POWER_RDC321X=y
 CONFIG_RTC=y
 CONFIG_RTC_MC146818=y
 
+CONFIG_SERIO=y
+CONFIG_SERIO_I8042=y
+
 CONFIG_SND=y
 CONFIG_SND_ES1370=y
 CONFIG_SND_PCSPKR=y
