--- a/drivers/serio/Makefile
+++ b/drivers/serio/Makefile
@@ -1,4 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core/
-
-obj-$(CONFIG_PS2_I8042) += i8042.o
+obj-$(CONFIG_SERIO_I8042) += i8042.o
