Function: Add parallel framework for the first time.
[parallel] Simply build this framework.
    -- The parallel bus is virtualized, which is mainly
        used to simulate GPIO and mainly relies on the
        device tree for enumeration.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/parallel/Kconfig
+++ b/drivers/parallel/Kconfig
@@ -3,6 +3,11 @@ menuconfig PARALLEL
     bool "Parallel Device (IEEE1284) Support"
 if PARALLEL
 
+config PARALLEL_DT
+    bool "Parallel Device Tree Linkage"
+    depends on DT
+    default y
+
 config PARALLEL_I8255
     bool "I8255 Parallel Support"
 
