Function: Added loop support for kshell.
[kshell] Add and maintain.
    -- Added loop command, just like shell's for,
        you can replace any variable name.

    -- Fixed the historical merge comparison problem of readline.
        Since there is no terminator at the end of the string,
        we first compare the length and then compare the strings.

    -- Fixed parser's variable truncation problem like "$var;" syntax,
        we manually convert it to text state.

[stdlib] add dependencies.
    -- Add itoa written hundreds of millions of years ago,
        it can convert variables to strings of different bases.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -18,6 +18,10 @@ config KCMD_GOTO
     bool "Goto Command Support"
     default y
 
+config KCMD_LOOP
+    bool "Loop Command Support"
+    default y
+
 config KCMD_MEM
     bool "Memory Command Support"
     default y
