--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -1,13 +1,15 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-$(CONFIG_KCMD_CLEAR) += clear.o
-obj-$(CONFIG_KCMD_ECHO) += echo.o
-obj-$(CONFIG_KCMD_EXPORT) += export.o
-obj-$(CONFIG_KCMD_GOTO) += goto.o
-obj-$(CONFIG_KCMD_LOOP) += loop.o
-obj-$(CONFIG_KCMD_MEM) += mem.o
-obj-$(CONFIG_KCMD_PANIC) += panic.o
-obj-$(CONFIG_KCMD_REBOOT) += reboot.o
-obj-$(CONFIG_KCMD_SLEEP) += sleep.o
-obj-$(CONFIG_KCMD_TIME) += time.o
-obj-$(CONFIG_KCMD_UPTIME) += uptime.o
-obj-$(CONFIG_KCMD_WATCH) += watch.o
+obj-$(CONFIG_KCMD_CLEAR)    += clear.o
+obj-$(CONFIG_KCMD_ECHO)     += echo.o
+obj-$(CONFIG_KCMD_EXPORT)   += export.o
+obj-$(CONFIG_KCMD_FALSE)    += false.o
+obj-$(CONFIG_KCMD_GOTO)     += goto.o
+obj-$(CONFIG_KCMD_LOOP)     += loop.o
+obj-$(CONFIG_KCMD_MEM)      += mem.o
+obj-$(CONFIG_KCMD_PANIC)    += panic.o
+obj-$(CONFIG_KCMD_REBOOT)   += reboot.o
+obj-$(CONFIG_KCMD_SLEEP)    += sleep.o
+obj-$(CONFIG_KCMD_TIME)     += time.o
+obj-$(CONFIG_KCMD_TRUE)     += true.o
+obj-$(CONFIG_KCMD_UPTIME)   += uptime.o
+obj-$(CONFIG_KCMD_WATCH)    += watch.o
