--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -6,6 +6,10 @@ config KCMD_CLEAR
     bool "CLEAR Command Support"
     default y
 
+config KCMD_COND
+    bool "Cond Command Support"
+    default y
+
 config KCMD_ECHO
     bool "Echo Command Support"
     default y
