Maintain: Redesign x86 device tree.
[virtual-pc] Separation equipment.
    -- Since the current x86 PC is developed and expanded based on ibmpc,
        so we separate them. virtual-pc is only used for additional devices,
        while ibmpc is used to describe some old devices.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -26,7 +26,7 @@ CONFIG_BLK_ATASIM32=y
 
 CONFIG_DT=y
 CONFIG_BUILTIN_DTB=y
-CONFIG_BUILTIN_DTB_PATH="boot/dts/ibmpc.dtb"
+CONFIG_BUILTIN_DTB_PATH="boot/dts/virtual-pc.dtb"
 
 CONFIG_FIRMWARE=y
 CONFIG_FIRMWARE_DMI=y
