--- a/boot/dts/Makefile
+++ b/boot/dts/Makefile
@@ -6,7 +6,7 @@ dtb-$(CONFIG_ARCH_ARM)      += raspi-zero.dtb
 dtb-$(CONFIG_ARCH_ARM)      += raspi-2b.dtb
 dtb-$(CONFIG_ARCH_ARM)      += raspi-3b.dtb
 dtb-$(CONFIG_ARCH_CSKY)     += immortal-sword.dtb
-dtb-$(CONFIG_ARCH_X86)      += ibmpc.dtb
+dtb-$(CONFIG_ARCH_X86)      += virtual-pc.dtb
 dtb-$(CONFIG_ARCH_XTENSA)   += esp32.dtb
 dtb-$(CONFIG_ARCH_XTENSA)   += esp8266.dtb
 
