Function: Added kernel support for asprintf.
[kasprintf] Add for the first time.
    -- This function is used to format strings of unknown length.
        It will automatically allocate a buffer of appropriate length,
        so it should be released manually after use.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,9 +1,10 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += libc/ font/ crypto/
-obj-y += bitops.o bitmap.o librtc.o
-obj-y += rbtree.o sort.o klist.o
-obj-y += kfifo.o ncache.o ilist.o
-obj-y += size.o time.o idr.o param.o
+obj-y += bitops.o bitmap.o ncache.o
+obj-y += sort.o klist.o ilist.o
+obj-y += rbtree.o idr.o kfifo.o
+obj-y += param.o kasprintf.o
+obj-y += size.o time.o librtc.o
 obj-$(CONFIG_DEBUG_LIST) += list.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist.o
