Function: Added support for device tree generic parsing phandles.
[device tree] Add and maintain.
    -- Separated the iterator section into a separate file and added
        common child nodes and iterative methods for activating nodes.

    -- We separated the relevant matching operations of the platform bus
        from the base operation of the device tree, because this part
        itself belongs to the platform bus.

    -- We speed up the search speed of phandle by means of special function
        linked list. The principle is that when we enumerate device tree
        node resources, once we find that the node has phandle resources,
        we will insert it into a special linked list.

    -- We have added a special method for parsing the phandle map, but some of
        the functions in this part have not yet been completely perfected.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/drivers/dt/Makefile
+++ b/drivers/dt/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += fdt.o early.o base.o
+obj-y += iterator.o parser.o
 obj-y += address.o bus.o irq.o
 obj-$(CONFIG_BUILTIN_DTB) += dtb.o
 
