Function: Add GPIO framework for the first time.
[gpio] Add function.
    -- The basic registration and operation methods have been added,
        but our work is far from complete. Next, we have to complete
        the enumeration and linkage of the device tree.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -32,6 +32,9 @@ CONFIG_FIRMWARE=y
 CONFIG_FIRMWARE_DMI=y
 CONFIG_FIRMWARE_QEMU=y
 
+CONFIG_GPIO=y
+CONFIG_GPIO_PARALLEL=y
+
 CONFIG_I2C=y
 CONFIG_I2C_I801=y
 CONFIG_I2C_PIIX4=y
