--- a/drivers/usb/host/Makefile
+++ b/drivers/usb/host/Makefile
@@ -1,1 +1,4 @@
-obj-y += ehci-hcd.o uhci-hcd.o
+# SPDX-License-Identifier: GPL-2.0-or-later
+obj-$(CONFIG_USB_OHCI) += ohci-hcd.o ohci/
+obj-$(CONFIG_USB_UHCI) += uhci-hcd.o uhci/
+obj-$(CONFIG_USB_EHCI) += ehci-hcd.o ehci/
