Function: Special code is added for general printing memory.
[memdump] Add features and test.
    -- Using this module, you can output the contents
        of your memory in any format.

    -- A complete unit test is added to test the format.

Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,7 +4,8 @@ obj-y += bitops.o bitmap.o ncache.o
 obj-y += sort.o klist.o ilist.o
 obj-y += rbtree.o idr.o kfifo.o
 obj-y += param.o kasprintf.o
-obj-y += size.o time.o librtc.o
+obj-y += time.o librtc.o
+obj-y += size.o memdump.o
 obj-$(CONFIG_DEBUG_LIST) += list.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist.o
